--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+### Java ###
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Maven #
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -6,3 +18,7 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+
+### Intellij Idea ###
+.idea/
+*.iml
